--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <!-- Meta Tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Test</title>
+  <meta name="author" content="Dominik Hofer">
+  <meta name="description" content="List ist eine minimalistische, intuitiv zu benutzende und schön designte Todo App. Damit du immer den Überblick über deine Aufgaben hast und nie mehr etwas vergisst.">
+  <meta name="keywords" content="todo, app, minimalistisch, design, aufgaben, tasks">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -15,6 +17,11 @@
 
 </head>
 <body>
-  <h1>Hallo Welt</h1>
+
+  <!-- Header -->
+  <header>
+    
+  </header>
+
 </body>
 </html>
