--- a/source/index.html
+++ b/source/index.html
@@ -70,7 +70,7 @@
 
     <!-- Header -->
     <header id="top">
-      <div class="wrapper-padding">
+      <div class="wrapper">
         <div class="header__text">
           <h1 class="header__title">List</h1>
           <h2 class="header__subtitle h3 light">Die einzige Todoliste, die du benötigst</h2>
