--- a/source/download.html
+++ b/source/download.html
@@ -101,7 +101,7 @@
 
       <section class="dl-link">
         <div class="dl-link__wrapper wrapper">
-          <h3 class="dl-link__title h2 wrapper">Downloadlink zusenden:</h3>
+          <h3 class="dl-link__title h2">Downloadlink zusenden:</h3>
           <form action="#" class="form dl-link__form">
             <div class="form__row">
               <div class="form__item form__item--1-3">
